# rustafari

./: Cargo.toml  README.md
src/: errors.rs  graph.rs  main.rs  routes.rs
