[package]
name = "rustafari"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
shuttle-axum = "0.53.0"
shuttle-runtime = "0.53.0"
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }